// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`locale and content language are equal renders links to 2 alternate contents 1`] = `
Array [
  "Also available in",
  " ",
  <span>
    <a
      href="/posts/slug"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <img
        aria-hidden="true"
        className="jsx-3777641437"
        height="12"
        src="/locales/pt-BR.png"
        width="16"
      />
       
      Português
    </a>
  </span>,
  ", ",
  <span>
    <a
      href="/posts/slug"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <img
        aria-hidden="true"
        className="jsx-3777641437"
        height="12"
        src="/locales/de.png"
        width="16"
      />
       
      German
    </a>
  </span>,
  ".",
  " ",
]
`;

exports[`locale and content language are equal renders links to alternate content 1`] = `
Array [
  "Also available in",
  " ",
  <span>
    <a
      href="/posts/slug"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <img
        aria-hidden="true"
        className="jsx-3777641437"
        height="12"
        src="/locales/pt-BR.png"
        width="16"
      />
       
      Português
    </a>
  </span>,
  ".",
  " ",
]
`;

exports[`locale and content language are not equal render warning and links to 1 alternate content 1`] = `
Array [
  "Somente disponível em",
  " ",
  <span>
    <img
      aria-hidden="true"
      className="jsx-3777641437"
      height="12"
      src="/locales/en.png"
      width="16"
    />
     
    Inglês
  </span>,
  ", ",
  <span>
    <a
      href="/posts/slug"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <img
        aria-hidden="true"
        className="jsx-3777641437"
        height="12"
        src="/locales/pt-BR.png"
        width="16"
      />
       
      Português
    </a>
  </span>,
  ".",
  " ",
]
`;

exports[`locale and content language are not equal render warning and links to 2 alternate contents 1`] = `
Array [
  "Somente disponível em",
  " ",
  <span>
    <img
      aria-hidden="true"
      className="jsx-3777641437"
      height="12"
      src="/locales/en.png"
      width="16"
    />
     
    Inglês
  </span>,
  ", ",
  <span>
    <a
      href="/posts/slug"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <img
        aria-hidden="true"
        className="jsx-3777641437"
        height="12"
        src="/locales/pt-BR.png"
        width="16"
      />
       
      Português
    </a>
  </span>,
  ", ",
  <span>
    <a
      href="/posts/slug"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <img
        aria-hidden="true"
        className="jsx-3777641437"
        height="12"
        src="/locales/de.png"
        width="16"
      />
       
      Alemão
    </a>
  </span>,
  ".",
  " ",
]
`;

exports[`locale and content language are not equal render warning without alternate content 1`] = `
Array [
  "Somente disponível em",
  " ",
  <span>
    <img
      aria-hidden="true"
      className="jsx-3777641437"
      height="12"
      src="/locales/en.png"
      width="16"
    />
     
    Inglês
  </span>,
  ".",
  " ",
]
`;

exports[`locale and content language are not equal render with a wrapper 1`] = `
<p
  data-testid="wrappertest"
>
  Somente disponível em
   
  <span>
    <img
      aria-hidden="true"
      className="jsx-3777641437"
      height="12"
      src="/locales/en.png"
      width="16"
    />
     
    Inglês
  </span>
  .
   
</p>
`;
